# crash_ide

./: Cargo.toml  Readme.md  setup.sh
.cargo/: config.toml
.github/workflows/: first_issue.yml  release.yml
crates/crash_ide_assets/: Cargo.toml
crates/crash_ide_assets/src/: colors.rs  fonts.rs  icons.rs  lib.rs
crates/crash_ide_clipboard/: Cargo.toml
crates/crash_ide_clipboard/src/: lib.rs
crates/crash_ide_code_view/: Cargo.toml
crates/crash_ide_code_view/src/: bundle.rs  component.rs  content.rs  create.rs  cursor.rs  focus.rs  keyboard.rs  lib.rs  line_container.rs  update_text.rs
crates/crash_ide_config/: Cargo.toml
crates/crash_ide_config/src/: general.rs  home_dir.rs  lib.rs  load.rs  plugin.rs  project.rs
crates/crash_ide_console/: Cargo.toml
crates/crash_ide_console/src/: console.rs  lib.rs  raw_console.rs
crates/crash_ide_discord_rpc/src/: activity.rs
crates/crash_ide_file/: Cargo.toml
crates/crash_ide_file/src/: event.rs  handler.rs  lib.rs
crates/crash_ide_file/src/extension/: image.rs  sound.rs  text.rs  video.rs
crates/crash_ide_file_picker/: Cargo.toml
crates/crash_ide_file_picker/src/: directory.rs  file.rs  lib.rs
crates/crash_ide_file_watcher/: Cargo.toml
crates/crash_ide_file_watcher/src/: instance.rs  lib.rs
crates/crash_ide_notification/: Cargo.toml
crates/crash_ide_notification/src/: lib.rs
crates/crash_ide_plugin_api/: Cargo.toml
crates/crash_ide_plugin_api/src/: common.rs  lib.rs  plugin_main.rs  pluginbound_message.rs  serverbound_message.rs
crates/crash_ide_plugin_loader/: Cargo.toml
crates/crash_ide_plugin_loader/src/: lib.rs  load.rs  messages.rs  plugin_instance.rs  stream.rs
crates/crash_ide_plugin_manager/: Cargo.toml
crates/crash_ide_plugin_manager/src/: lib.rs  messages.rs  plugin_instance.rs
crates/crash_ide_plugin_types/: Cargo.toml
crates/crash_ide_plugin_types/src/: lib.rs  message.rs  plugin_info.rs  pluginbound_message.rs  serverbound_message.rs
crates/crash_ide_project/: Cargo.toml
crates/crash_ide_project/src/: event.rs  files.rs  lib.rs  project.rs  util.rs
crates/crash_ide_state/: Cargo.toml
crates/crash_ide_state/src/: lib.rs
crates/crash_ide_text_input/: Cargo.toml
crates/crash_ide_text_input/src/: bundle.rs  component.rs  content.rs  create.rs  cursor.rs  event.rs  focus.rs  keyboard.rs  lib.rs  line_container.rs  update_text.rs
crates/crash_ide_ui/: Cargo.toml
crates/crash_ide_ui/src/: button.rs  checkbox.rs  editor.rs  lib.rs  open_project.rs  settings.rs  startup.rs  switch_project.rs  text_scale.rs  trigger.rs  widget.rs  window.rs
crates/crash_ide_ui/src/editor/: editor_bottom_menu.rs  editor_left_menu.rs  editor_top_menu.rs  main_editor_screen.rs
crates/crash_ide_ui/src/editor/editor_bottom_menu/: console_menu.rs
crates/crash_ide_ui/src/editor/editor_file_view/: default_file_view.rs
crates/crash_ide_ui/src/editor/editor_left_menu/: filesystem_menu.rs
crates/crash_ide_ui/src/editor/editor_left_menu/filesystem_menu/: file_context_menu.rs  file_path.rs  file_watcher.rs  filename_dialog.rs
crates/crash_ide_ui/src/editor/editor_top_menu/: file_menu.rs  help_menu.rs  settings_menu.rs  top_menu.rs
crates/crash_ide_ui/src/settings/: general_settings_menu.rs  plugin.rs
crates/crash_ide_ui/src/startup/: startup_left_menu.rs  startup_project_select.rs  startup_settings.rs
crates/crash_ide_ui/src/widget/: button.rs  context_menu.rs  context_menu_row.rs  folder_input.rs  notification.rs  screen.rs
crates/crash_ide_ui/src/widget/button/: close_project_button.rs  create_project_button.rs  github_button.rs  open_project_button.rs
crates/crash_ide_ui/src/widget/context_menu/: context_menu.rs  context_menu_row.rs
crates/crash_ide_ui/src/widget/screen/: project_create_screen.rs
crates/crash_ide_util/: Cargo.toml
crates/crash_ide_util/src/: find_component.rs  lib.rs
crates/crash_ide_widget/: Cargo.toml
crates/crash_ide_widget/src/: button.rs  cursor.rs  hoverable.rs  input.rs  lib.rs  scrollable.rs
crates/editor_assets/: Cargo.toml
crates/editor_assets/src/: icons.rs  lib.rs
crates/editor_config/: Cargo.toml
crates/editor_config/src/: home_dir.rs  lib.rs  load.rs  project.rs
crates/editor_console/: Cargo.toml
crates/editor_console/src/: console.rs  raw_console.rs
crates/editor_file/: Cargo.toml
crates/editor_file/src/: event.rs  extension.rs  file_view.rs  handler.rs  lib.rs
crates/editor_file_picker/: Cargo.toml
crates/editor_file_picker/src/: lib.rs
crates/editor_main/: Cargo.toml
crates/editor_main/src/: main.rs
crates/editor_state/: Cargo.toml
crates/editor_state/src/: lib.rs
crates/editor_ui/: Cargo.toml
crates/editor_ui/src/: button.rs  editor.rs  file_dialog.rs  fonts.rs  icons.rs  lib.rs  open_project.rs  root.rs  startup.rs  widget.rs  window.rs
crates/editor_ui/src/editor/: editor_file_view.rs  editor_left_menu.rs  editor_top_menu.rs  main_editor_screen.rs
crates/editor_ui/src/editor/editor_bottom_menu/: console_menu.rs
crates/editor_ui/src/editor/editor_file_view/: default_file_view.rs  file_view.rs
crates/editor_ui/src/editor/editor_left_menu/: filesystem_menu.rs
crates/editor_ui/src/editor/editor_top_menu/: file_menu.rs  top_menu.rs
crates/editor_ui/src/startup/: project_select.rs  startup_left_menu.rs  startup_project_create.rs  startup_project_select.rs  startup_settings.rs
crates/editor_ui/src/widget/: button.rs  folder_input.rs  hoverable.rs  input.rs  screen.rs
crates/editor_ui/src/widget/button/: create_project_button.rs  double_click_button.rs  open_project_button.rs
crates/editor_ui/src/widget/input/: text_input_field.rs
crates/editor_ui/src/widget/screen/: project_create_screen.rs
crates/editor_widget/: Cargo.toml
crates/editor_widget/src/: button.rs  expandable_menu.rs  focus_node.rs  (+4 more)
plugins/crash_ide_discord_rpc/: Cargo.toml
plugins/crash_ide_discord_rpc/src/: activity.rs  client.rs  config.rs  lib.rs  status.rs
plugins/crash_ide_discord_rpc_old/: Cargo.toml
plugins/crash_ide_discord_rpc_old/src/: lib.rs
plugins/minimal_plugin/: Cargo.toml
src/: main.rs
(+18 files in other folders)
