[package]
name = "crash_ide"
version = "0.1.0"
edition = "2021"
authors = ["https://github.com/Cr4shd3v"]
readme = "Readme.md"
repository = "https://github.com/Cr4shd3v/editor"
homepage = "https://github.com/Cr4shd3v/editor"
description = "An IDE written in rust with bevy"
license = "GPL-3"

[package.metadata.deb]
revision = ""
assets = [
    ["target/release/crash_ide", "usr/bin/", "755"],
    ["build/linux/crash_ide.desktop", "usr/share/applications/", "644"],
    ["Readme.md", "usr/share/doc/crash-ide/README", "644"],
    ["assets/**/*", "var/lib/crash-ide", "644"],
]
license-file = "LICENSE"
section = "devel"

[package.metadata.generate-rpm]
assets = [
    {source = "target/release/crash_ide", dest = "/usr/bin/", mode = "755"},
    {source = "build/linux/crash_ide.desktop", dest = "/usr/share/applications/", mode = "644"},
    {source = "Readme.md", dest = "/usr/share/doc/crash-ide/README", mode = "644"},
    {source = "assets/**/*", dest = "/var/lib/crash-ide", mode = "644"},
]

[dependencies]
bevy = { workspace = true, features = ["bevy_asset", "x11", "wayland", "multi-threaded"] }
crash_ide_state = { workspace = true }
crash_ide_config = { workspace = true }
crash_ide_ui = { workspace = true }
crash_ide_widget = { workspace = true }
crash_ide_file = { workspace = true }
crash_ide_assets = { workspace = true }
crash_ide_file_picker = { workspace = true }
crash_ide_console = { workspace = true }
crash_ide_project = { workspace = true }
crash_ide_discord_rpc = { workspace = true }
crash_ide_notification = { workspace = true }

[workspace]
members = ["crates/*", "plugins/*"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.13.2", default-features = false }
serde = "^1.0"
serde_json = "^1.0"
homedir = "^0.2"
open = "^5.1"
image = "^0.24"
rfd = "^0.14"
discord-presence = "^1.2"

crash_ide_state = { path = "crates/crash_ide_state" }
crash_ide_config = { path = "crates/crash_ide_config" }
crash_ide_ui = { path = "crates/crash_ide_ui" }
crash_ide_widget = { path = "crates/crash_ide_widget" }
crash_ide_file = { path = "crates/crash_ide_file" }
crash_ide_assets = { path = "crates/crash_ide_assets" }
crash_ide_file_picker = { path = "crates/crash_ide_file_picker" }
crash_ide_console = { path = "crates/crash_ide_console" }
crash_ide_util = { path = "crates/crash_ide_util" }
crash_ide_project = { path = "crates/crash_ide_project" }
crash_ide_notification = { path = "crates/crash_ide_notification" }

crash_ide_discord_rpc = { path = "plugins/crash_ide_discord_rpc" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3