[package]
name = "crash_ide_plugin_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }

crash_ide_config = { workspace = true }
crash_ide_plugin_types = { workspace = true }