[package]
name = "crash_ide_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["bevy_ui", "bevy_winit", "png"] }
open = { workspace = true }

crash_ide_state = { workspace = true }
crash_ide_config = { workspace = true }
crash_ide_widget = { workspace = true }
crash_ide_file = { workspace = true }
crash_ide_assets = { workspace = true }
crash_ide_file_picker = { workspace = true }
crash_ide_console = { workspace = true }