[package]
name = "crash_ide_discord_rpc_old"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
discord-presence = { workspace = true }
serde = { workspace = true }

crash_ide_project = { workspace = true }
crash_ide_widget = { workspace = true }
crash_ide_ui = { workspace = true }
crash_ide_file = { workspace = true }
crash_ide_config = { workspace = true }
crash_ide_assets = { workspace = true }
crash_ide_state = { workspace = true }